--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/swiper": "^6.0.0",
     "autoprefixer": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
