--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": " 13.4.19",
+    "@netlify/plugin-nextjs": "^4.37.2",
+    "next": "latest",
     "react": "latest",
     "react-dom": "latest",
     "styled-jsx": "^5.1.2",
