--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "latest",
+    "@types/node-fetch": "^2.6.6",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/swiper": "^6.0.0",
