--- a/package.json
+++ b/package.json
@@ -10,11 +10,20 @@
   },
   "dependencies": {
     "@netlify/plugin-nextjs": "4.40.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.284.0",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
     "react": "latest",
     "react-dom": "latest",
     "styled-jsx": "^5.1.2",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "latest",
